Fix vertical alignment of close icon now it's a button

--- a/src/assets/sass/modules/_alerts.scss
+++ b/src/assets/sass/modules/_alerts.scss
@@ -209,9 +209,8 @@ li.information {
 
 .close {
     position: absolute;
-    top: 0;
+    top: 0.5em;
     right: 0;
-    bottom: 0;
     width: 2.5384615em;
     border-left: 1px solid hsl(0 0% 100% / 0.66);
 
